added/updated projects & artwork
- added FUNK VS FRIGHT project
- updated resume
- added gameplay video to Booping Beep
- added art

--- a/Artwork/artwork.html
+++ b/Artwork/artwork.html
@@ -50,6 +50,9 @@
                 <p>Most of my art centers on OCs and portraits—I love creating characters with pretty faces! 
                     Constantly experimenting and learning, so expect variety in style!
                 </p>
+                <p>
+                    More of my art can be seen under my projects.
+                </p>
             </div>
         </section>
 
@@ -94,6 +97,27 @@
                 </div>
                 <div class="art-card">
                     <img src="assets/portrait6.png" alt="OC Portrait 6">
+                </div>
+
+                <div class="art-card">
+                    <img src="../Projects/funk_vs_fright/assets/funk.gif">
+                    <p>Meet FUNK, the main character for my game FUNK VS FRIGHT. You can view more of her inside my FUNK VS FRIGHT projects page.</p>
+                    <a href="../Projects/funk_vs_fright/funkVsFright.html" class="read-more">[ View More ]</a>
+                </div>
+                <div class="art-card">
+                    <img src="../Projects/funk_vs_fright/assets/phonk.gif">
+                    <p>Meet PHONK, a character enacting the shadow of FUNK for my game FUNK VS FRIGHT. You can view more of her inside my FUNK VS FRIGHT projects page.</p>
+                    <a href="../Projects/funk_vs_fright/funkVsFright.html" class="read-more">[ View More ]</a>
+                </div>
+                <div class="art-card">
+                    <img src="../Projects/funk_vs_fright/assets/baxter.gif">
+                    <p>Meet BAXTER, a character who is part of the "frights", in my game FUNK VS FRIGHT, with his bat-like eyes and reckless personality. You can view more of him inside my FUNK VS FRIGHT projects page.</p>
+                    <a href="../Projects/funk_vs_fright/funkVsFright.html" class="read-more">[ View More ]</a>
+                </div>
+                <div class="art-card">
+                    <img src="assets/croppedMara.gif">
+                    <p>Meet MARA, a charcter who is part of of the "frights", in my game FUNK VS FRIGHT, with her soft features and mysterous personality. You can view more of her inside my FUNK VS FRIGHT projects page.</p>
+                    <a href="../Projects/funk_vs_fright/funkVsFright.html" class="read-more">[ View More ]</a>
                 </div>
             </div>
         </section>
