--- a/Projects/funk_vs_fright/funkVsFright.html
+++ b/Projects/funk_vs_fright/funkVsFright.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.cdnfonts.com/css/satoshi" rel="stylesheet">
     <link rel="stylesheet" href="../../home.css">
     <link rel="stylesheet" href="../../Projects/projects.css"> 
-    <link rel="stylesheet" href="boopingBeep.css">
+    <link rel="stylesheet" href="funkVsFright.css">
     <link rel="stylesheet" href="../sntruggled/sntruggled.css">
 </head>
 
@@ -41,29 +41,30 @@
 
         <!-- Projects Hero -->
         <section class="projects-hero">
-            <h1>BOOPING BEEP</h1>
+            <h1>FUNK VS FRIGHT</h1>
         </section>
 
-        <img src="../assets/boopingBeep.png" class="project-logo">
+        <img src="../assets/funkVsFright.png" class="project-logo">
 
         <!-- Game Description -->
         <section class="project-details">
             <div class="project-description">
-                <p>Booping Beep is a 2D endless runner created for a 2025 Spring Game Jam hosted by SPIN_GameJam / GDC Northridge / VGDA. Players control a bee named Beep—dodging through endless obstacles and collecting power-ups along the way. Booping Beep was developed by a team of four within a 75-hour time limit, all participating in their first game jam. Booping Beep is also heavily inspired by the mobile game, Jetpack Joyride.</p>
-                <a href="https://veiix.itch.io/booping-beep" class="read-more" target="_blank" rel="noopener noreferrer">[ Play on itch.io! ]</a>
+                <p>FUNK VS FRIGHT is a 2.5D rhythm game created for a 2025 Halloween Horror Game Jam hosted by SPIN Game Jam. Players play as a girl named FUNK, exploring a strange and eerie world while uncovering the secrets of its inhabitants, and her own identity, through frightful beats. FUNK VS FRIGHT was developed by a team of four within a 10-day time limit.
+</p>
+                <a href="https://turtlelord53.itch.io/funkvsfright" class="read-more" target="_blank" rel="noopener noreferrer">[ Play on itch.io! ]</a>
 
                 <h2>GAMEPLAY VIDEO</h2>
                     <div class="video-container">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/2KB99jYnFAg?si=Nx0-K-QprpdfHblS" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/iyeOv2VAYFw?si=_Wi_lciT4wfnwtnP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
             </div>
 
             <div class="project-credits">
                 <h2>CREDITS</h2>
                 <ul>
-                    <li>Art, Animation, Design & QA – Emily Tran</li>
-                    <li>Art & QA – Nathan Lam</li>
-                    <li>UI, Music & Title Screen – Angela Santos</li>
+                    <li>Code, Character & HUD Art, Animation, Design, Dialogue System & Narrative – Emily Tran</li>
+                    <li>Code, Environmental Art, UI System, Dialogue System & Level System – Nathan Lam</li>
+                    <li>Code, Music, SFX & Level Design (Beatmaps) – Angela Santos</li>
                     <li>Code & Game Mechanics – William Licup</li>
                 </ul>
             </div>
@@ -71,23 +72,32 @@
             <!-- My Contributions -->
             <section class="contributions">
                 <h2>MY CONTRIBUTIONS</h2>
-                <p>Below are the sprites and animations I designed and implemented for this project.</p>
+                <p>Below are the art concepts, sprites and animations I designed and implemented for this project.</p>
             </section>
 
             <div class="screenshots-grid">
-                <img src="assets/beepSheet.png" alt="Screenshot 1">
-                <img src="assets/beepChonk.png" alt="Screenshot 2">
-                <img src="assets/beepHonk.gif" alt="Screenshot 3">
-                <img src="assets/beepSpeed.gif" alt="Screenshot 4">
-                <img src="assets/beepShield.gif" alt="Screenshot 5">
-                <img src="assets/beepBoth.gif" alt="Screenshot 6">
+                <img src="assets/characterConceptArt2.png">
+                <img src="assets/characterConceptArt.png">
+                <img src="assets/gameplayConceptArt.png">
+                <img src="assets/gameplayMockup.png">
+                <img src="assets/spritePreviewMask.png">
+                <img src="assets/spritePreview.png">
+                <img src="assets/funk.gif">
+                <img src="assets/phonk.gif">
+                <img src="assets/baxterMask.gif">
+                <img src="assets/baxter.gif">
+                <img src="assets/maraMask.gif">
+                <img src="assets/mara.gif">
+                <img src="assets/spriteFunk.gif">
+                <img src="assets/spriteBaxter.gif">
+                <img src="assets/spriteMara.gif">
             </div>
         </section>
 
         <!-- Software -->
         <section class="software">
             <h2>SOFTWARE</h2>
-                <p>Unity, Aseprite & FL Studio</p>
+                <p>Unity, Aseprite, MediBang Paint & FL Studio</p>
         </section>
 
     </div>
