--- a/Projects/projects.html
+++ b/Projects/projects.html
@@ -45,20 +45,30 @@
         <!-- Projects Grid -->
         <section class="projects-grid">
 
+            <!-- Project 0 -->
+            <div class="project-card">
+                <a href="funk_vs_fright/funkVsFright.html" class="project-link">
+                    <h3>FUNK VS FRIGHT</h3>
+                    <img src="assets/funkVsFright.png" alt="Project 0 Screenshot" />
+                </a>
+                <p>FUNK VS FRIGHT is a 2.5D rhythm game created for a 2025 Halloween Horror Game Jam hosted by SPIN Game Jam. See inside to view gameplay, art, and more!</p>
+                <a href="funk_vs_fright/funkVsFright.html" class="read-more">[ View Project Details ]</a>
+            </div>
+
             <!-- Project 1 -->
             <div class="project-card">
                 <a href="booping_beep/boopingBeep.html" class="project-link">
                     <h3>BOOPING BEEP</h3>
                     <img src="assets/boopingBeep.png" alt="Project 1 Screenshot" />
                 </a>
-                <p>Booping Beep is a 2D endless runner game created for a 2025 Spring Game Jam hosted by SPIN_GameJam, GDC Northridge and VGDA. See inside to explore gameplay, art, and more!</p>
+                <p>Booping Beep is a 2D endless runner game created for a 2025 Spring Game Jam hosted by SPIN_GameJam, GDC Northridge and VGDA. See inside to view gameplay, art, and more!</p>
                 <a href="booping_beep/boopingBeep.html" class="read-more">[ View Project Details ]</a>
             </div>
 
             <!-- Project 2 -->
             <div class="project-card">
                 <a href="sntruggled/sntruggled.html" class="project-link">
-                    <h3>SNTRUGGLED</h3>
+                    <h3><br>SNTRUGGLED</h3>
                     <img src="assets/sntruggled.png" alt="Project 1 Screenshot" />
                 </a>
                 <p>Sntruggled (a play on the words snuggled and struggled) is a VR FPS zombie survival game created for Cal Poly Pomona’s research VR Lab. See inside to view gameplay and more!</p>
@@ -78,7 +88,7 @@
             <!-- Project 4 -->
             <div class="project-card">
                 <a href="fitch/fitch.html" class="project-link">
-                    <h3><br>FITCH [WIP]</h3>
+                    <h3>FITCH [WIP]</h3>
                     <img src="assets/fitch.png" alt="Project 1 Screenshot" />
                 </a>
                 <p>Fitch is a 2D Metroidvania game being developed independently. See inside to view art and more!</p>
