updated credits in FUNK VS FRIGHT

--- a/Projects/funk_vs_fright/funkVsFright.html
+++ b/Projects/funk_vs_fright/funkVsFright.html
@@ -64,7 +64,7 @@
                 <ul>
                     <li>Code, Character & HUD Art, Animation, Design, Dialogue System & Narrative – Emily Tran</li>
                     <li>Code, Environmental Art, UI System, Dialogue System & Level System – Nathan Lam</li>
-                    <li>Code, Music, SFX & Level Design (Beatmaps) – Angela Santos</li>
+                    <li>Code, Music, SFX, Level Design (Beatmaps) & Narrative – Angela Santos</li>
                     <li>Code & Game Mechanics – William Licup</li>
                 </ul>
             </div>
